--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,5 @@ jobs:
 
       - name: Run octocov
         uses: k1LoW/octocov-action@v0
+        env:
+          OCTOCOV_CUSTOM_METRICS_TEST: custom_metrics_runn.json
