--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,20 +17,21 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
 
       - name: Run lint
         uses: reviewdog/action-golangci-lint@v2
         with:
-          fail_on_error: true
-          golangci_lint_flags: --timeout=5m
+          fail_level: warning
+          go_version_file: go.mod
+          cache: false
 
       - name: Run tests
         run: make ci
 
       - name: Run octocov
-        uses: k1LoW/octocov-action@v0
+        uses: k1LoW/octocov-action@v1
         env:
           OCTOCOV_CUSTOM_METRICS_TEST: custom_metrics_runn.json
