--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,11 +1,37 @@
+version: "2"
 linters:
   enable:
-    - gosec
     - errorlint
-  fast: false
-linters-settings:
-  staticcheck:
-    go: 1.17
-issues:
-  exclude:
-    - SA3000
+    - godot
+    - gosec
+    - misspell
+    - revive
+  settings:
+    errcheck:
+      check-type-assertions: true
+    misspell:
+      locale: US
+    revive:
+      rules:
+        - name: unexported-return
+          disabled: true
+        - name: exported
+          disabled: false
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
